--- a/client/react/package.json
+++ b/client/react/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "js-cookie": "^3.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^7.5.3",
+    "reactjs-popup": "^2.0.6",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
