--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "supports-color": "^8.1.1",
     "tree-kill": "^1.2.2",
     "tslib": "^2.8.1",
+    "uuid": "^11.1.0",
     "wrap-ansi": "^7.0.0",
     "y18n": "^5.0.8",
     "yargs": "^17.7.2",
@@ -33,7 +34,7 @@
     "concurrently": "^9.1.2"
   },
   "scripts": {
-    "dev": "concurrently \"npm run dev --prefix client\/react\" \"npm run server --prefix server\""
+    "dev": "concurrently \"npm run dev --prefix client/react\" \"npm run server --prefix server\""
   },
   "keywords": [],
   "author": "",
